Spacing and height fixes

--- a/src/components/EvNumberField/EvNumberField.scss
+++ b/src/components/EvNumberField/EvNumberField.scss
@@ -1,10 +1,10 @@
 
 .ev-number-field--minus {
-    margin-left: -0.375rem;
+    margin-left: -0.5rem;
 }
 
 .ev-number-field--plus {
-    margin-right: -0.375rem;
+    margin-right: -0.5rem;
 }
 
 .ev-number-field--currency {
